--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.4",
+    "fast-deep-equal": "^3.1.3",
+    "uuid": "^9.0.0",
     "vue": "^3.2.41"
   },
   "devDependencies": {
