--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/uuid": "^8.3.4",
     "fast-deep-equal": "^3.1.3",
     "uuid": "^9.0.0",
-    "vue": "^3.2.41"
+    "vue": "^3.2.41",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
