--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@types/lodash.clonedeep": "^4.5.7",
     "@types/uuid": "^8.3.4",
     "fast-deep-equal": "^3.1.3",
+    "lodash.clonedeep": "^4.5.0",
     "uuid": "^9.0.0",
     "vue": "^3.2.41",
     "vuex": "^4.0.2"
